--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -117,13 +117,13 @@
 /* sm */
 @media (min-width: 640px) {
   .hero__p1 {
-    max-width: var(--max-width-65);
+    max-width: 57ch; 
     letter-spacing: var(--letter-spacing-005);
     margin-inline: var(--margin-inline-auto);
   }
 
   .hero__p2 {
-    max-width: var(--max-width-57);
+    max-width: 66ch;
     margin-inline: var(--margin-inline-auto);
   }
 }
